// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectable Chip should render correctly with lg size 1`] = `
<button
  class="chipBaseClassnames px-1200 py-[7px] text-100 gap-x-400 cursor-pointer rounded-4800 hover:bg-opacity-black-100 hover:text-opacity-black-600 font-regular inline-flex items-center justify-center border-75 border-solid-slate-200 disabled:opacity-600 data-[state=selected]:bg-solid-slate-1200 data-[state=selected]:fill-solid-slate-50 data-[state=selected]:text-solid-slate-50"
  data-state=""
>
  Chip - lg
</button>
`;

exports[`Selectable Chip should render correctly with md size 1`] = `
<button
  class="chipBaseClassnames px-800 py-[5px] text-75 gap-x-400 cursor-pointer rounded-4800 hover:bg-opacity-black-100 hover:text-opacity-black-600 font-regular inline-flex items-center justify-center border-75 border-solid-slate-200 disabled:opacity-600 data-[state=selected]:bg-solid-slate-1200 data-[state=selected]:fill-solid-slate-50 data-[state=selected]:text-solid-slate-50"
  data-state=""
>
  Chip - md
</button>
`;

exports[`Selectable Chip should render correctly with sm size 1`] = `
<button
  class="chipBaseClassnames px-600 py-[3px] text-50 gap-x-400 cursor-pointer rounded-4800 hover:bg-opacity-black-100 hover:text-opacity-black-600 font-regular inline-flex items-center justify-center border-75 border-solid-slate-200 disabled:opacity-600 data-[state=selected]:bg-solid-slate-1200 data-[state=selected]:fill-solid-slate-50 data-[state=selected]:text-solid-slate-50"
  data-state=""
>
  Chip - sm
</button>
`;
